--- a/docs/lecture/style.css
+++ b/docs/lecture/style.css
@@ -1,12 +1,15 @@
+/*
 .theme-5 #slide .titlepage h1 {
     margin-bottom: 1em;
 }
+*/
 
 /* * #slide {
   left: 14%;
   right: 2%;
 } */
 
+/*
 #slide {
   right: 14%;
   left: 2%;
@@ -34,3 +37,4 @@ blockquote {
     border-top: 1px solid #999;
     padding-top: 0.5em;
 }
+*/
